# Agentic-Work---Crypto-Cycling

./: .gitignore  PIPELINE.md  README.md  pyproject.toml
api/: main.py
api/models/: responses.py
api/routers/: analysis.py  brief.py  market.py  sentiment.py
api/services/: cache.py  mcp_client.py
cycling-coach/: .gitignore  PIPELINE.md  pyproject.toml  test_agent3.py
cycling-coach/agents/: base_agent.py  bike_recommender.py  data_retrieval.py  performance.py  training_plan.py
cycling-coach/api/: main.py
cycling-coach/api/models/: responses.py
cycling-coach/api/routers/: analysis.py  bikes.py  plan.py  rides.py
cycling-coach/api/services/: cache.py  session.py
cycling-coach/orchestrator/: context.py  main.py  orchestrator.py
cycling-coach/prompts/: bike_recommendation.txt  performance_analysis.txt  training_plan.txt
cycling-coach/server/: main.py
cycling-coach/server/tools/: coaching_tools.py
cycling-coach/tests/: test_agent3.py
cycling-coach/tools/: metrics.py  scraper.py  strava_auth.py  strava_client.py  validators.py
cycling-coach/ui/: package-lock.json  package.json  tailwind.config.js
cycling-coach/ui/src/: App.tsx  api.ts  index.css
cycling-coach/ui/src/components/Bikes/: BikeCard.tsx  BikeRankings.tsx
cycling-coach/ui/src/components/Dashboard/: PerformancePanel.tsx  RideSummary.tsx  TrainingPlan.tsx
cycling-coach/ui/src/components/Layout/: Header.tsx  Sidebar.tsx
cycling-coach/ui/src/hooks/: useAnalysis.ts  useBikes.ts  useRideSummary.ts
prompts/: investment_brief.txt
server/: config.py  main.py
server/models/: schemas.py
server/tools/: brief_generator.py  market_data.py  news_sentiment.py  technical.py
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: TokenSelector.tsx
ui/src/hooks/: useBrief.ts  useMarketData.ts  useNewsSentiment.ts  (+1 more)
(+5 files in other folders)
