[project]
name = "crypto-research-agent"
version = "0.1.0"
description = "MCP server exposing crypto research tools to Claude"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "ta>=0.11.0",
    "anthropic>=0.25.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]

[project.scripts]
crypto-agent = "server.main:main"
crypto-api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "api"]

[tool.hatch.build.targets.editable]
packages = ["server", "api"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]