[project]
name = "cycling-coach"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "stravalib>=1.5.0",
]

[project.scripts]
cycling-coach = "orchestrator.main:main"
cycling-api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "agents", "server", "tools", "models", "api"]

[tool.hatch.build.targets.editable]
packages = ["orchestrator", "agents", "server", "tools", "models", "api"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
